--- a/AirQ_Part2_006.ipynb
+++ b/AirQ_Part2_006.ipynb
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 92,
    "id": "56719c08-77d7-45c0-8a04-5b1fe82e988a",
    "metadata": {},
    "outputs": [
@@ -574,53 +574,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "== DWH-ONLY RESET: dwh2_006 ==\n",
-      "▶ Running SQL script: C:\\Users\\nikol\\OneDrive\\Documents\\TUWien\\3.Semester\\BI\\assignments\\assignment2\\BI_Projects\\BI_Projects\\DWH2_006\\ddl\\airq_reset_dwh2_006.sql (2 statements)\n",
-      "    1: -- ------------------------------- -- 1) Assignment 1: create/reset dwh2_xxx schema per group -- ----------------------- ...\n",
-      "       OK (0.009s)\n",
-      "    2: CREATE SCHEMA dwh2_006 AUTHORIZATION grp_006; ...\n",
-      "       OK (0.001s)\n",
-      "✅ Done in 0.02s\n",
-      "▶ Running SQL script: C:\\Users\\nikol\\OneDrive\\Documents\\TUWien\\3.Semester\\BI\\assignments\\assignment2\\BI_Projects\\BI_Projects\\DWH2_006\\ddl\\airq_create_dwh2_006.sql (19 statements)\n",
-      "    1: -- Make the A2's dwh2_006 schema the default for this session SET search_path TO dwh2_006; ...\n",
-      "       OK (0.000s)\n",
-      "    2: -- Create schema CREATE SCHEMA IF NOT EXISTS dwh2_006; ...\n",
-      "       OK (0.000s)\n",
-      "    3: -- ------------------------------- -- 2) DROP TABLE before attempting to create Star Schema tables, drop in dependency o ...\n",
-      "       OK (0.000s)\n",
-      "    4: DROP TABLE IF EXISTS dwh2_006.dim_alertpeak CASCADE; ...\n",
-      "       OK (0.000s)\n",
-      "    5: DROP TABLE IF EXISTS dwh2_006.dim_param CASCADE; ...\n",
-      "       OK (0.000s)\n",
-      "    6: DROP TABLE IF EXISTS dwh2_006.dim_city CASCADE; ...\n",
-      "       OK (0.000s)\n",
-      "    7: DROP TABLE IF EXISTS dwh2_006.dim_timemonth CASCADE; ...\n",
-      "       OK (0.000s)\n",
-      "    8: -- ========================= -- 3) CREATE TABLE statements for DIMENSIONS -- ========================= -- 3.1) Time (Mon ...\n",
-      "       OK (0.015s)\n",
-      "    9: CREATE UNIQUE INDEX ON dim_timemonth (year_num, month_num); ...\n",
-      "       OK (0.001s)\n",
-      "   10: -- 3.2) City dimension (Country → City) CREATE TABLE dim_city ( city_key BIGINT GENERATED ALWAYS AS IDENTITY PRIMARY KEY ...\n",
-      "       OK (0.007s)\n",
-      "   11: -- 3.3) Param dimension (Purpose → Category → Param) CREATE TABLE dim_param ( param_key BIGINT GENERATED ALWAYS AS IDENT ...\n",
-      "       OK (0.004s)\n",
-      "   12: -- 3.4) Peak alert level dimension (derived, fixed set) -- Keys are fixed so they can be meaningfully sorted in tools an ...\n",
-      "       OK (0.003s)\n",
-      "   13: -- ========================= -- 4) CREATE TABLE statements for the FACT -- ========================= CREATE TABLE ft_par ...\n",
-      "       OK (0.005s)\n",
-      "   14: -- Helpful indexes for common OLAP access paths CREATE INDEX IF NOT EXISTS ix_ft_city ON ft_param_city_month (city_key); ...\n",
-      "       OK (0.002s)\n",
-      "   15: CREATE INDEX IF NOT EXISTS ix_ft_param ON ft_param_city_month (param_key); ...\n",
-      "       OK (0.001s)\n",
-      "   16: CREATE INDEX IF NOT EXISTS ix_ft_alertpeak ON ft_param_city_month (alertpeak_key); ...\n",
-      "       OK (0.001s)\n",
-      "   17: CREATE INDEX IF NOT EXISTS ix_ft_month ON ft_param_city_month (month_key); ...\n",
-      "       OK (0.001s)\n",
-      "   18: CREATE INDEX IF NOT EXISTS ix_ft_month_param ON ft_param_city_month (month_key, param_key); ...\n",
-      "       OK (0.001s)\n",
-      "   19: CREATE INDEX IF NOT EXISTS ix_ft_country_alert ON ft_param_city_month (alertpeak_key, city_key); ...\n",
-      "       OK (0.001s)\n",
-      "✅ Done in 0.04s\n"
+      "== DWH-ONLY RESET: dwh2_006 ==\n"
      ]
     }
    ],
@@ -648,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 93,
    "id": "518eb416",
    "metadata": {},
    "outputs": [],
@@ -2458,17 +2412,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 91,
    "id": "2c035ecf-7dee-4ab5-a5db-811fa8d4dd25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://localhost:60330'"
+       "'http://localhost:51325'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2639,51 +2593,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "id": "4429ac35-8624-46de-8e9d-9b09f4c80d7c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hierarchies and Measures defined successfully.\n"
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[89], line 9\u001b[0m\n\u001b[0;32m      5\u001b[0m h[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAlert\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m [ap_store[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert_level_name\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# TODO: define measures\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Fully Additive (SUM)\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[43mm\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mReading Events\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m        \u001b[38;5;241m=\u001b[39m tt\u001b[38;5;241m.\u001b[39magg\u001b[38;5;241m.\u001b[39msum(fact_store[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreading_events_count\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m     10\u001b[0m m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDevices Reporting\u001b[39m\u001b[38;5;124m\"\u001b[39m]     \u001b[38;5;241m=\u001b[39m tt\u001b[38;5;241m.\u001b[39magg\u001b[38;5;241m.\u001b[39msum(fact_store[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdevices_reporting_count\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m     11\u001b[0m m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData Volume (KB)\u001b[39m\u001b[38;5;124m\"\u001b[39m]      \u001b[38;5;241m=\u001b[39m tt\u001b[38;5;241m.\u001b[39magg\u001b[38;5;241m.\u001b[39msum(fact_store[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata_volume_kb_sum\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
    ],
    "source": [
     "# TODO: define hierarchies\n",
-    "# h[\"Time\"]  = [...]\n",
-    "# h[\"Geo\"]   = [...]\n",
-    "# h[\"Param\"] = [...]\n",
-    "# h[\"Alert\"] = [...]\n",
-    "\n",
-    "# TODO: define measures\n",
-    "# m[\"Reading Events\"]        =   ...      # fully additive\n",
-    "# m[\"Devices Reporting\"]     =   ...      # fully additive\n",
-    "# m[\"Data Volume (KB)\"]      =   ...      # fully additive\n",
-    "# m[\"Missing Days\"]          =   ...      # fully additive\n",
-    "# m[\"Exceed Days (any)\"]     =   ...      # fully additive\n",
-    "# m[\"Avg Recorded Value\"]    =   ...      # semi-additive\n",
-    "# m[\"P95 Recorded Value\"]    =   ...      # semi-additive\n",
-    "# m[\"Avg Data Quality\"]      =   ...      # semi-additive\n",
-    "\n",
-    "# === 1. Define Hierarchies ===\n",
-    "# Time: Year -> Quarter -> Month\n",
     "h[\"Time\"] = [time_store[\"year_num\"], time_store[\"quarter_num\"], time_store[\"month_name\"]]\n",
-    "\n",
-    "# Geo: Region -> Country -> City\n",
     "h[\"Geo\"] = [city_store[\"region_name\"], city_store[\"country_name\"], city_store[\"city_name\"]]\n",
-    "\n",
-    "# Param: Purpose -> Category -> Param\n",
     "h[\"Param\"] = [param_store[\"purpose\"], param_store[\"category\"], param_store[\"param_name\"]]\n",
-    "\n",
-    "# Alert: Level\n",
     "h[\"Alert\"] = [ap_store[\"alert_level_name\"]]\n",
     "\n",
-    "\n",
-    "# === 2. Define Measures ===\n",
-    "\n",
+    "# TODO: define measures\n",
     "# Fully Additive (SUM)\n",
     "m[\"Reading Events\"]        = tt.agg.sum(fact_store[\"reading_events_count\"])\n",
     "m[\"Devices Reporting\"]     = tt.agg.sum(fact_store[\"devices_reporting_count\"])\n",
@@ -2694,14 +2627,12 @@
     "# Semi-Additive (MEAN)\n",
     "m[\"Avg Recorded Value\"]    = tt.agg.mean(fact_store[\"recordedvalue_avg\"])\n",
     "m[\"P95 Recorded Value\"]    = tt.agg.mean(fact_store[\"recordedvalue_p95\"])\n",
-    "m[\"Avg Data Quality\"]      = tt.agg.mean(fact_store[\"data_quality_avg\"])\n",
-    "\n",
-    "print(\"Hierarchies and Measures defined successfully.\")"
+    "m[\"Avg Data Quality\"]      = tt.agg.mean(fact_store[\"data_quality_avg\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "id": "3404b2db-3869-4fb6-8255-1099bf3919ce",
    "metadata": {},
    "outputs": [],
